--- a/index.html
+++ b/index.html
@@ -11,33 +11,19 @@
 </head>
 <body>
   <header>
-    <h1>BeCode DOM exploration | <strong>Selectors</strong></h1>
+    <h1>BeCode DOM exploration | <strong>Creation</strong></h1>
   </header>
 
   <main>
-    <h1>This is a first level title</h1>
+    <h1>DOM Manipulation</h1>
 
-    <p class="important">This a paragraph</p>
-
-    <p id="p-with-an-id">This paragraph has an id</p>
-
-    <div>
-      <p>This paragraph is inside a div and is followed by an important image<br /></p>
-      <figure>
-        <img src="../assets/domtoretto.jpg" alt="Dominic Toretto" class="important" />
-        <figcaption>Dominic Toretto, from Fast&Furious</figcaption>
-      </figure>
-    </div>
-
-    <p>This is the last paragraph, it contains</p>
-    <figure>
-      <img src="../assets/kitten.jpeg" alt="A kitten" />
-      <figcaption>A kitten, a baby cat</figcaption>
-    </figure>
+    <article>
+      <h2>Those are the people I'm with</h2>
+    </article>
   </main>
 
   <footer>
-    The footer usually contains <span class="important">meaningful content</span>, well *usually* ...
+    The footer seems pretty useless here
   </footer>
 </body>
 </html>
