--- a/index.html
+++ b/index.html
@@ -7,23 +7,50 @@
   <title>Exploring the DOM</title>
 
   <link rel="stylesheet" href="../assets/style.css">
-  <script defer src="script.js"></script>
+  <script defer src="app.js"></script>
 </head>
 <body>
   <header>
-    <h1>BeCode DOM exploration | <strong>Creation</strong></h1>
+    <h1>BeCode DOM exploration | <strong>Navigate</strong></h1>
   </header>
 
   <main>
-    <h1>DOM Manipulation</h1>
+    <section>
+      <h2>The first section</h2>
 
-    <article>
-      <h2>Those are the people I'm with</h2>
-    </article>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, nesciunt incidunt accusantium quaerat aliquid ullam distinctio, mollitia iure, id tempore repellat soluta officia quisquam rerum. Nesciunt explicabo adipisci maiores totam.
+      </p>
+
+      <p>
+        A list of things that matters
+        <ol>
+          <li>Sleep well</li>
+          <li>Eat well</li>
+          <li>Self care</li>
+          <li>Learning to code</li>
+          <li>The Fast and Furious film franchise</li>
+        </ol>
+      </p>
+    </section>
+
+    <section>
+      <h2>The third section</h2>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident dolorem explicabo in fugiat natus. Illum, cum exercitationem? Earum doloribus esse velit expedita illo hic enim, sed voluptatem, omnis officia ipsam!</p>
+    </section>
+
+    <section>
+      <div>
+        <h2>The second section</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, dolor dolorem dolores eaque animi sint facere aperiam ducimus deleniti! A doloribus quo iste animi inventore laborum amet ea cumque suscipit?</p>
+      </div>
+    </section>
   </main>
 
   <footer>
-    The footer seems pretty useless here
+    This is the footer, you should know that already
   </footer>
 </body>
 </html>
