--- a/index.html
+++ b/index.html
@@ -4,53 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exploring the DOM</title>
+  <title>DOM events</title>
 
-  <link rel="stylesheet" href="../assets/style.css">
-  <script defer src="app.js"></script>
+  <link rel="stylesheet" href="./assets/style.css">
+  <script defer src="event.js"></script>
 </head>
 <body>
-  <header>
-    <h1>BeCode DOM exploration | <strong>Navigate</strong></h1>
-  </header>
 
   <main>
-    <section>
-      <h2>The first section</h2>
-
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, nesciunt incidunt accusantium quaerat aliquid ullam distinctio, mollitia iure, id tempore repellat soluta officia quisquam rerum. Nesciunt explicabo adipisci maiores totam.
-      </p>
-
-      <p>
-        A list of things that matters
-        <ol>
-          <li>Sleep well</li>
-          <li>Eat well</li>
-          <li>Self care</li>
-          <li>Learning to code</li>
-          <li>The Fast and Furious film franchise</li>
-        </ol>
-      </p>
+    <section class="displayedsquare-wrapper">
+      <!-- Dynamically put the squares in here -->
     </section>
 
     <section>
-      <h2>The third section</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident dolorem explicabo in fugiat natus. Illum, cum exercitationem? Earum doloribus esse velit expedita illo hic enim, sed voluptatem, omnis officia ipsam!</p>
-    </section>
-
-    <section>
-      <div>
-        <h2>The second section</h2>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, dolor dolorem dolores eaque animi sint facere aperiam ducimus deleniti! A doloribus quo iste animi inventore laborum amet ea cumque suscipit?</p>
+      <div class="actionsquare-wrapper">
+        <div class="actionsquare green"></div>
+        <div class="actionsquare violet"></div>
+        <div class="actionsquare orange"></div>
       </div>
     </section>
-  </main>
 
-  <footer>
-    This is the footer, you should know that already
-  </footer>
+    <section>
+      <h2>Action log</h2>
+
+      <ul>
+        <!-- Dynamically put the logs in here -->
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
